--- a/style/css/iostyle.css
+++ b/style/css/iostyle.css
@@ -9,7 +9,7 @@
   --black-footer: #212529;
 }
 
-/* Layout */
+/* Flex */
 .flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -32,9 +32,22 @@
   max-width: 100%
 }
 
+.justify-content-center {
+  justify-content: center;
+}
+
+.justify-content-around {
+  justify-content: space-between;
+}
+
 /* Padding */
 .pt-5 {
   padding-top: 8rem;
+}
+
+/* Height & Width */
+.h-100 {
+  height: 100vh
 }
 
 /* Text Area */
@@ -70,6 +83,10 @@
   border-color: transparent;
   border-radius: .25rem;
   transition: all .2s;
+}
+
+.io-btn:hover {
+  cursor: pointer;
 }
 
 @media (max-width: 30rem) {
